# eth-rpc-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
src/commands/: balance.rs  block_number.rs  mod.rs
